--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^5.1.0"
+    "web-vitals": "^5.1.0",
+    "webpack-dev-server": "^5.2.2"
   },
   "scripts": {
     "server": "nodemon src/server/index.js",
